--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # GCP credentials & configuration
-GCP_PROJECT="gcp-demo-028"
-BQ_DATASET="cloudexporthub"
-BQ_TABLE="gcp_billing_export_resource_v1_010040_690C15_CB3933"
+GCP_PROJECT=""
+BQ_DATASET=""
+BQ_TABLE=""
 LOCATION="us-central1"
-STORAGE_BUCKET="gcp-demo-028-agents"
+STORAGE_BUCKET="demo-agents"
 
 GOOGLE_GENAI_USE_VERTEXAI="false"
-GOOGLE_CLOUD_PROJECT="gcp-demo-028"
-GOOGLE_CLOUD_LOCATION="us-central1"
+GOOGLE_CLOUD_PROJECT=""
+GOOGLE_CLOUD_LOCATION=""
